# water_ctrl

./: README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  main.c  ntp_time.c  ntp_time.h  schedule_manager.c  schedule_manager.h  water_ctrl.c  water_ctrl.h  water_status.c  water_status.h  web_server.c  web_server.h
spiffs_image/: index.html
